# DevOps-Course-Starter

./: .dockerignore  .env.j2  .env.template  .env.test  .gitignore  Dockerfile  README.md  deployment.yaml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test-ci.yml  install_python.sh  inventory.ini  launch.json  main.tf  playbook.yml  prometheus.yml  pyproject.toml  todo_app.service  todoapp.socket  variables.tf
.github/workflows/: ci-pipeline copy.yml  ci-pipeline.yml
scripts/: migrate_trello_to_mongo.py
terraform/modules/base/: main.tf  outputs.tf  variables.tf
terraform/modules/prod/: main.tf  variables.tf
terraform/modules/test/: main.tf  outputs.tf  variables.tf
todo_app/: app.py  flask_config.py  kv_secrets.py  logger_config.py  test_app.py  user.py  utils.py
todo_app/data/: db.py  get_trello_items.py  item.py  item_lists.py  mongo_item.py  session_items.py  trello_item.py  trello_items.py  user_management.py
todo_app/static/: index.js
todo_app/templates/: index.html  layout.html  login_error.html  user_management.html
todo_app/tests/: test_app.py  test_index_view_model.py  test_user_view_model.py
todo_app/tests/cassettes/: test_index_page.yaml
todo_app/tests_e2e/: setup.py  test_app.py  test_app_e2e.py
todo_app/view_models/: index_view_model.py  test_index_view_model.py  user_view_model.py
