[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.3.3"
python-dotenv = "^0.14.0"
requests = "^2.31.0"
pytest = "^7.4.0"
selenium = "^4.15.1"
vcrpy = "^5.1.0"
pytest-vcr = "^1.0.2"
gunicorn = "^21.2.0"
pytest-watch = "^4.2.0"
certifi = "2023.7.22"
urllib3 = "1.26.18"
azure-identity = "^1.15.0"
azure-keyvault-secrets = "^4.7.0"
cryptography = "42.0.4"
jinja2 = "3.1.3"
pymongo = "^4.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
